// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search handles no search results 1`] = `
<div>
  <div
    class="relative flex lg:justify-center items-center mb-2 basis-16 md:basis-20 border-b-2 rr-border w-full"
  >
    <form
      class="flex justify-between md:justify-between items-stretch h-10 w-full"
      novalidate=""
    >
      <input
        class="mr-4 px-2 min-m-lg border-b-2 rr-border dark:bg-gh-darkly rr-text w-full md:w-2/3"
        name="search"
        placeholder="Here goes the artist..."
        type="text"
        value="No match"
      />
      <button
        class="btn flex btn-large"
        type="submit"
      >
        Search
      </button>
    </form>
    <div
      class="absolute px-3 bg-slate-100 dark:bg-gh-darkly border-2 border-gh-dark top-14 md:top-16 w-full z-10"
    >
      <div
        class="overflow-auto w-full"
      >
        <p
          class="rr-text flex justify-center"
        >
          No artists found
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search should handle the search action of the user 1`] = `
<div>
  <div
    class="relative flex lg:justify-center items-center mb-2 basis-16 md:basis-20 border-b-2 rr-border w-full"
  >
    <form
      class="flex justify-between md:justify-between items-stretch h-10 w-full"
      novalidate=""
    >
      <input
        class="mr-4 px-2 min-m-lg border-b-2 rr-border dark:bg-gh-darkly rr-text w-full md:w-2/3"
        name="search"
        placeholder="Here goes the artist..."
        type="text"
        value="Sam Gendel"
      />
      <button
        class="btn flex btn-large"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;
